--- a/src/app/first-task/first-task.component.html
+++ b/src/app/first-task/first-task.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="crud">
+<div class="crud">
 
     <h1 style="text-align: center;">Assessment</h1>
 
@@ -11,6 +11,8 @@
                     <input type="text" class="form-control" id="FirstName" placeholder="Enter Name"
                         formControlName="name" autocomplete="off">
                     <br>
+                 
+        
                 </div>
                 <div>
                     <label for="mob" class="form-label">Mobile Number :</label>
@@ -55,4 +57,4 @@
                 </button>
             </td>
     </tbody>
-</table> -->
+</table>
