--- a/src/app/left/left.component.html
+++ b/src/app/left/left.component.html
@@ -1,2 +1,52 @@
+<div mat-dialog-title>
+    <h1> Employee Form </h1>
+</div>
+<form [formGroup]="empform" (ngSubmit)="postdata()">
+    <div mat-dialog-content class="content">
+        <div class="row">
+            <mat-form-field appearance="outline" class="input">
+                <mat-label>First name</mat-label>
+                <input matInput type="text" placeholder="Ex: steven" formControlName="firstname">
+            </mat-form-field>
 
-<p>left component works</p>
+            <mat-form-field appearance="outline" class="input">
+                <mat-label>Last name</mat-label>
+                <input matInput type="text" placeholder="Ex: smith" formControlName="lastname">
+            </mat-form-field>
+        </div>
+
+        <div class="row">
+            <mat-form-field appearance="outline" class="input2">
+                <mat-label>Email</mat-label>
+                <input matInput type="text" placeholder="Ex: steven@gmail.com" formControlName="email">
+            </mat-form-field>
+
+            <mat-form-field appearance="outline" class="input2">
+                <mat-label>Mobile number</mat-label>
+                <input matInput type="number" formControlName="mobilenumber">
+            </mat-form-field>
+        </div>
+
+        <div class="row">
+            <mat-form-field class="dropdown">
+                <mat-label>Education</mat-label>
+                <mat-select name="education" formControlName="education">
+                    <mat-option *ngFor="let edu of education" [value]="edu">{{edu}}
+                    </mat-option>
+                </mat-select>
+            </mat-form-field>
+        </div>
+        <div>
+            <mat-radio-group aria-label="Select an option" formControlName="gender">
+                <mat-label><b>Gender</b></mat-label>
+                <mat-radio-button value="Male">Male</mat-radio-button>
+                <mat-radio-button value="Female">Female</mat-radio-button>
+            </mat-radio-group>
+        </div>
+    </div>
+    <div mat-dialog-action class="action">
+        <button mat-raised-button (click)="close()">Cancel</button>
+        <button mat-raised-button color="primary" class="save" type="submit">save</button>
+    </div>
+</form>
+
