--- a/src/app/right/right.component.css
+++ b/src/app/right/right.component.css
@@ -1,9 +1,7 @@
-.right{
-    margin-left: 10%;
-    font-size: large;
-    text-align: center;
-    justify-content:center ;
-    margin-top: 20%;
-    font-size:x-large;
-
-}
+.example-spacer {
+    flex: 1 1 auto;
+  }
+  .container{
+    margin-left:40% ;
+    margin-top: 10%;
+  }
