--- a/src/app/right/right.component.html
+++ b/src/app/right/right.component.html
@@ -1,20 +1,69 @@
-<!-- <ul class="nav nav-pills">
-    <li class="nav-item">
-        <a class="nav-link" routerLink="/left" routerLinkActive="active">Left</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" routerLink="/blog" routerLinkActive="active">Blog</a>
-    </li>
-</ul> -->
+<mat-toolbar color="primary">
+    <span>CRUD </span>
+    <span class="example-spacer"></span>
+    <button mat-raised-button (click)="edit()">Add Employee </button>
+</mat-toolbar>
 
-<ul class="nav nav-pills">
-    <li class="nav-item">
-        <a class="nav-link" routerLink="/left" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">Left</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" routerLink="/contact" routerLinkActive="active">contact</a>
-    </li>
-</ul>
+<!-- table -->
 
+<mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+  </mat-form-field>
+  
+  <div class="mat-elevation-z8">
+    <table mat-table [dataSource]="dataSource" matSort>
+  
+      <!-- ID Column -->
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
+        <td mat-cell *matCellDef="let row"> {{row.id}} </td>
+      </ng-container>
+  
+      <!-- Progress Column -->
+      <ng-container matColumnDef="firstname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Firstname </th>
+        <td mat-cell *matCellDef="let row"> {{row.firstname}}</td>
+      </ng-container>
+  
+      <!-- Name Column -->
+      <ng-container matColumnDef="lastname">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Lastname </th>
+        <td mat-cell *matCellDef="let row"> {{row.lastname}} </td>
+      </ng-container>
+  
+      <!-- Fruit Column -->
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> email </th>
+        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="mobilenumber">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> mobilenumber </th>
+        <td mat-cell *matCellDef="let row"> {{row.mobilenumber}} </td>
+      </ng-container>
 
-<router-outlet></router-outlet>
+      <ng-container matColumnDef="education">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> education </th>
+        <td mat-cell *matCellDef="let row"> {{row.education}} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="gender">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> gender </th>
+        <td mat-cell *matCellDef="let row"> {{row.gender}} </td>
+      </ng-container>
+  
+  
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  
+      <!-- Row shown when there is no matching data. -->
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+      </tr>
+    </table>
+  
+    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+  </div>
+  
+  
