--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,8 +6,7 @@
     padding: 5%;
     height: 60%; 
     border-radius: 5%;
-    background: linear-gradient(125deg, #901fc5, #ffff);
-
+    background:linear-gradient(120deg,skyblue,#cb51e4);
 }
 #btn{
     margin-left: 30%;
